--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
     border-radius: 2px;
     box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12),
         0 2px 10px 0 rgba(34, 36, 38, .08);
+
 }
 
 .product {
@@ -82,19 +83,6 @@
     transition: background .1s ease;
 }
 
-.round_button {
-    background: #04a613;
-    color: #FFF;
-    border-radius: 100%;
-    width: 2rem;
-    height: 100%;
-    box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, .15) inset;
-    display: inline-block;
-    min-height: 1em;
-    border: none;
-    text-align: center;
-}
-
 .bl-title {
     padding: 1em;
 }
@@ -104,7 +92,7 @@
 }
 
 .item {
-    margin-bottom: 3px;
+    margin: 1px 2px;
     background-color: #DADADA;
     padding: .5833em .833em;
     font-weight: 700;
@@ -116,12 +104,28 @@
     text-transform: none;
 }
 
-.orange-button {
-    font-size: .64285714rem;
+.round_button {
+    background: #04a613;
+    color: #FFF;
+    border-radius: 100%;
     width: 2rem;
     height: 2rem;
+    box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, .15) inset;
+    display: inline-block;
+    min-height: 1em;
+    border: none;
     text-align: center;
-    border-radius: 500rem;
-    background-color: #F2711C;
+    font-size: 1.1428571rem;
+}
+
+.orange-button {
+    font-size: .64285714rem;
+    background: #F2711C;
     color: #FFF;
+    border-radius: 100%;
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
 }
