--- a/main.css
+++ b/main.css
@@ -1,131 +1,177 @@
 .container {
-    overflow: auto;
-    display: flex;
-    justify-content: space-around;
-    padding-top: 100px;
-    min-width: 723px;
+  overflow: auto;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 100px;
+  min-width: 723px;
 }
 
 .minicont {
-    padding: 10px;
-    background: white;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12),
-        0 2px 10px 0 rgba(34, 36, 38, .08);
+  padding: 10px;
+  background: white;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 0 rgba(34, 36, 38, 0.12),
+    0 2px 10px 0 rgba(34, 36, 38, 0.08);
+}
 
+.my-input {
+  display: flex;
+  font-size: 1em;
+  position: relative;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
+  font-style: normal;
+  box-sizing: inherit;
+  line-height: 1.4285em;
+  border-top: none;
+  border-radius: 0.28571429rem 0.28571429rem 0 0;
+  max-width: 100%;
+  padding: 1em;
+}
+
+.my-input * {
+  height: 2.6rem;
+}
+
+.add {
+  border-radius: 0 0.2307em 0.2307em 0;
+  margin: 0;
+  width: 20%;
+  align-items: center;
+  flex: 0 0 auto;
+  background-color: #2185d0;
+  color: #fff;
+  text-shadow: none;
+  background-image: none;
+  box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
+  font-size: 1rem;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  max-width: 100px;
+  outline: 0;
+  border: none;
+  vertical-align: middle;
+  text-align: center;
+  user-select: none;
+  transition: opacity 0.1s ease, background-color 0.1s ease,
+    box-shadow 0.1s ease, color 0.1s ease, background 0.1s ease;
+  font-weight: 700;
 }
 
 .product {
-    margin: 10px;
-    align-items: stretch;
-    display: flex;
+  padding: 3px;
+  display: flex;
+  border-top: 1px solid grey;
 }
 
 .label {
-    width: 25%;
-    padding: 1rem 0rem 0.5rem;
+  width: 25%;
+  padding: 1rem 0rem 0.5rem;
 }
 
 .count {
-    width: 39%;
-    padding: 1rem;
-    vertical-align: middle;
+  width: 39%;
+  padding: 1rem;
+  vertical-align: middle;
+  align-items: stretch;
 }
 
 .buttons {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    display: flex;
+  padding: 1rem;
+  display: flex;
+  float: right;
+  text-align: right;
 }
 
 #cancel {
-    background-color: red;
-    color: white;
+  background-color: red;
+  color: white;
 }
 
 .button {
-    background-color: #DADADA;
-    font-size: .71428571rem;
-    border-radius: 1px;
-    cursor: pointer;
-    display: inline-block;
-    min-height: 1em;
-    outline: 0;
-    border: none;
-    vertical-align: middle;
-    background: linear-gradient(transparent, rgba(0, 0, 0, .05)) #F8F8F8;
-    color: rgba(0, 0, 0, .6);
-    margin: 0 .25em 0 0;
-    padding: 1em 1.5em;
-    text-shadow: none;
-    text-align: center;
-    border-radius: .4em;
-    box-shadow: 0 0 0 1px rgba(34, 36, 38, .15) inset,
-        0 -0.3em 0 0 rgba(34, 36, 38, .15) inset;
-    font-weight: 700;
+  background-color: #dadada;
+  font-size: 0.71428571rem;
+  border-radius: 1px;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  outline: 0;
+  border: none;
+  vertical-align: middle;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.05)) #f8f8f8;
+  color: rgba(0, 0, 0, 0.6);
+  margin: 0 0.25em 0 0;
+  padding: 1em 1.5em;
+  text-shadow: none;
+  text-align: center;
+  border-radius: 0.4em;
+  box-shadow: 0 0 0 1px rgba(34, 36, 38, 0.15) inset,
+    0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
+  font-weight: 700;
 }
 
-
 .numlabel {
-    background: #cdcbcb;
-    font-size: .85714286rem;
-    display: inline-block;
-    line-height: 1;
-    vertical-align: middle;
-    margin: 0.2% .14285714em;
-    background-color: #E8E8E8;
-    padding: .5833em .833em;
-    color: rgba(0, 0, 0, .6);
-    text-transform: none;
-    font-weight: 700;
-    border: 0 solid transparent;
-    border-radius: .28571429rem;
-    transition: background .1s ease;
+  background: #cdcbcb;
+  font-size: 0.85714286rem;
+  display: inline-block;
+  line-height: 1;
+  vertical-align: middle;
+  margin: 0.2% 0.14285714em;
+  background-color: #e8e8e8;
+  padding: 0.5833em 0.833em;
+  color: rgba(0, 0, 0, 0.6);
+  text-transform: none;
+  font-weight: 700;
+  border: 0 solid transparent;
+  border-radius: 0.28571429rem;
+  transition: background 0.1s ease;
 }
 
 .bl-title {
-    padding: 1em;
+  padding: 1em;
 }
 
 .left {
-    padding: 1em;
+  padding: 1em;
 }
 
 .item {
-    margin: 1px 2px;
-    background-color: #DADADA;
-    padding: .5833em .833em;
-    font-weight: 700;
-    border: 0 solid transparent;
-    border-radius: .28571429rem;
-    font-size: .64285714rem;
-    line-height: 1;
-    color: rgba(0, 0, 0, .6);
-    text-transform: none;
+  margin: 1px 2px;
+  background-color: #dadada;
+  padding: 0.5833em 0.833em;
+  font-weight: 700;
+  border: 0 solid transparent;
+  border-radius: 0.28571429rem;
+  font-size: 0.64285714rem;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.6);
+  text-transform: none;
 }
 
 .round_button {
-    background: #04a613;
-    color: #FFF;
-    border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
-    box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, .15) inset;
-    display: inline-block;
-    min-height: 1em;
-    border: none;
-    text-align: center;
-    font-size: 1.1428571rem;
+  background: #04a613;
+  color: #fff;
+  border-radius: 100%;
+  width: 2rem;
+  height: 2rem;
+  box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
+  display: inline-block;
+  min-height: 1em;
+  border: none;
+  text-align: center;
+  font-size: 1.1428571rem;
 }
 
 .orange-button {
-    font-size: .64285714rem;
-    background: #F2711C;
-    color: #FFF;
-    border-radius: 100%;
-    width: 1rem;
-    height: 1rem;
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
+  font-size: 0.64285714rem;
+  background: #f2711c;
+  color: #fff;
+  border-radius: 100%;
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 1.7;
 }
