--- a/main.css
+++ b/main.css
@@ -1,39 +1,3 @@
-.container {
-  overflow: auto;
-  display: flex;
-  padding-top: 100px;
-  min-width: 723px;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-
-.minicont {
-  padding: 10px;
-  background: white;
-  border-radius: 2px;
-  box-shadow: 0 2px 4px 0 rgba(34, 36, 38, 0.12),
-    0 2px 10px 0 rgba(34, 36, 38, 0.08);
-}
-
-.my-input {
-  display: flex;
-  font-size: 1em;
-  position: relative;
-  font-weight: 400;
-  color: rgba(0, 0, 0, 0.87);
-  font-style: normal;
-  box-sizing: inherit;
-  line-height: 1.4285em;
-  border-top: none;
-  border-radius: 0.28571429rem 0.28571429rem 0 0;
-  max-width: 100%;
-  padding: 1em;
-}
-
-.my-input * {
-  height: 2.6rem;
-}
-
 .add {
   border-radius: 0 0.2307em 0.2307em 0;
   margin: 0;
@@ -58,124 +22,6 @@
   transition: opacity 0.1s ease, background-color 0.1s ease,
     box-shadow 0.1s ease, color 0.1s ease, background 0.1s ease;
   font-weight: 700;
-}
-
-.product {
-  padding: 3px;
-  display: flex;
-  border-top: 1px solid grey;
-}
-
-.label {
-  width: 25%;
-  padding: 1.5rem 0rem;
-  height: 1em;
-}
-
-.count {
-  width: 37%;
-  padding: 1rem;
-  vertical-align: middle;
-  text-align: center;
-}
-
-.buttons {
-  width: 37%;
-  padding: 1rem;
-  float: right;
-  text-align: right;
-}
-
-#cancel {
-  background-color: red;
-  color: white;
-}
-
-.button {
-  background-color: #dadada;
-  font-size: 0.71428571rem;
-  border-radius: 1px;
-  cursor: pointer;
-  display: inline-block;
-  min-height: 1em;
-  outline: 0;
-  border: none;
-  vertical-align: middle;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.05)) #f8f8f8;
-  color: rgba(0, 0, 0, 0.6);
-  margin: 0 0.25em 0 0;
-  padding: 1em 1.5em;
-  text-shadow: none;
-  text-align: center;
-  border-radius: 0.4em;
-  box-shadow: 0 0 0 1px rgba(34, 36, 38, 0.15) inset,
-    0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
-  font-weight: 700;
-}
-
-.numlabel {
-  background: #cdcbcb;
-  font-size: 0.85714286rem;
-  display: inline-block;
-  line-height: 1;
-  vertical-align: middle;
-  margin: 0.2% 0.14285714em;
-  background-color: #e8e8e8;
-  padding: 0.5833em 0.833em;
-  color: rgba(0, 0, 0, 0.6);
-  text-transform: none;
-  font-weight: 700;
-  border: 0 solid transparent;
-  border-radius: 0.28571429rem;
-  transition: background 0.1s ease;
-}
-
-.bl-title {
-  padding: 1em;
-}
-
-.left {
-  padding: 1em;
-}
-
-.item {
-  margin: 1px 2px;
-  background-color: #dadada;
-  padding: 0.5833em 0.833em;
-  font-weight: 700;
-  border: 0 solid transparent;
-  border-radius: 0.28571429rem;
-  font-size: 0.64285714rem;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.6);
-  text-transform: none;
-}
-
-.round_button {
-  background: #04a613;
-  color: #fff;
-  border-radius: 100%;
-  width: 2rem;
-  height: 2rem;
-  box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
-  display: inline-block;
-  min-height: 1em;
-  border: none;
-  text-align: center;
-  font-size: 1.1428571rem;
-}
-
-.orange-button {
-  font-size: 0.64285714rem;
-  background: #f2711c;
-  color: #fff;
-  border-radius: 100%;
-  width: 1rem;
-  height: 1rem;
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 1.7;
 }
 
 .bage {
@@ -204,10 +50,180 @@
   visibility: visible;
 }
 
+.buttons {
+  width: 37%;
+  min-width: 133px;
+  padding: 1rem;
+  float: right;
+  text-align: right;
+}
+
+.bl-title {
+  padding: 1em;
+}
+
+.button {
+  background-color: #dadada;
+  font-size: 0.71428571rem;
+  border-radius: 1px;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  outline: 0;
+  border: none;
+  vertical-align: middle;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.05)) #f8f8f8;
+  color: rgba(0, 0, 0, 0.6);
+  margin: 0 0.25em 0 0;
+  padding: 1em 1.5em;
+  text-shadow: none;
+  text-align: center;
+  border-radius: 0.4em;
+  box-shadow: 0 0 0 1px rgba(34, 36, 38, 0.15) inset,
+    0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
+  font-weight: 700;
+}
+
+.container {
+  overflow: auto;
+  display: flex;
+  padding-top: 100px;
+  margin-left: 5%;
+  margin-right: auto;
+  box-sizing: content-box;
+  min-width: 470px;
+}
+
+@media (max-width: 700px) {
+  .container {
+    display: block;
+    margin-right: -10%;
+  }
+  .minicont {
+    width: 80% !important;
+  }
+}
+
+.count {
+  width: 37%;
+  min-width: 108px;
+  padding: 1rem;
+  vertical-align: middle;
+  text-align: center;
+}
+
+#cancel {
+  background-color: red;
+  color: white;
+}
+
+.item {
+  margin: 1px 2px;
+  background-color: #dadada;
+  padding: 0.5833em 0.833em;
+  font-weight: 700;
+  border: 0 solid transparent;
+  border-radius: 0.28571429rem;
+  font-size: 0.64285714rem;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.6);
+  text-transform: none;
+  display: inline-block;
+}
+
+.label {
+  width: 25%;
+  min-width: 72px;
+  padding: 1.5rem 0rem;
+  height: 1em;
+}
+
+.left {
+  padding: 1em;
+}
+
+.minicont {
+  padding: 10px;
+  margin: 10px;
+  background: white;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 0 rgba(34, 36, 38, 0.12),
+    0 2px 10px 0 rgba(34, 36, 38, 0.08);
+}
+
+.my-input {
+  display: flex;
+  font-size: 1em;
+  position: relative;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
+  font-style: normal;
+  box-sizing: inherit;
+  line-height: 1.4285em;
+  border-top: none;
+  border-radius: 0.28571429rem 0.28571429rem 0 0;
+  max-width: 100%;
+  padding: 1em 1%;
+}
+
+.my-input * {
+  height: 2.6rem;
+}
+
 .name {
   visibility: hidden;
   text-align: left;
   padding-left: 5px;
   font-size: 0.6em;
   font-weight: 100;
+}
+
+.numlabel {
+  background: #cdcbcb;
+  font-size: 0.85714286rem;
+  display: inline-block;
+  line-height: 1;
+  vertical-align: middle;
+  margin: 0.2% 0.14285714em;
+  background-color: #e8e8e8;
+  padding: 0.5833em 0.833em;
+  color: rgba(0, 0, 0, 0.6);
+  text-transform: none;
+  font-weight: 700;
+  border: 0 solid transparent;
+  border-radius: 0.28571429rem;
+  transition: background 0.1s ease;
+}
+
+.product {
+  padding: 3px;
+  display: flex;
+  border-top: 1px solid grey;
+}
+
+.round_button {
+  background: #04a613;
+  color: #fff;
+  border-radius: 100%;
+  width: 2rem;
+  height: 2rem;
+  box-shadow: 0 -0.3em 0 0 rgba(34, 36, 38, 0.15) inset;
+  display: inline-block;
+  min-height: 1em;
+  border: none;
+  text-align: center;
+  font-size: 1.1428571rem;
+}
+
+.orange-button {
+  font-size: 0.64285714rem;
+  background: #f2711c;
+  color: #fff;
+  border-radius: 100%;
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 1.7;
 }
