--- a/main.css
+++ b/main.css
@@ -39,6 +39,7 @@
   font-size: 1.5rem;
   cursor: pointer;
   transition: height 1s;
+  transition: background-color 0.5s ease;
 }
 
 .bage:hover {
@@ -215,6 +216,44 @@
   font-size: 1.1428571rem;
 }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  font-size: 0.8rem;
+  font-weight: 800;
+  visibility: hidden;
+  width: 100px;
+  height: 1.1em !important;
+  background-color: #9207ac;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -50px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
 .orange-button {
   font-size: 0.64285714rem;
   background: #f2711c;
@@ -226,4 +265,9 @@
   text-align: center;
   vertical-align: middle;
   line-height: 1.7;
+}
+
+.button .round_button :hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
