--- a/main.css
+++ b/main.css
@@ -98,8 +98,6 @@
   min-width: 470px;
 }
 
-
-
 .count {
   width: 37%;
   min-width: 108px;
@@ -111,6 +109,11 @@
 #cancel {
   background-color: red;
   color: white;
+}
+
+.cart {
+  border-top: 1px solid rgb(206, 200, 200);
+  padding: 1em;
 }
 
 .item {
@@ -130,7 +133,7 @@
 .label {
   width: 25%;
   min-width: 72px;
-  padding: 1.5rem 0rem;
+  padding: 1.5rem 1rem;
   height: 1em;
 }
 
@@ -139,7 +142,7 @@
 }
 
 .minicont {
-  padding: 10px;
+  padding: 10px 0;
   margin: 10px;
   background: white;
   border-radius: 2px;
@@ -191,10 +194,23 @@
   transition: background 0.1s ease;
 }
 
+.orange-button {
+  font-size: 0.64285714rem;
+  background: #f2711c;
+  color: #fff;
+  border-radius: 100%;
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 1.7;
+}
+
 .product {
   padding: 3px;
   display: flex;
-  border-top: 1px solid grey;
+  border-top: 1px solid rgb(206, 200, 200);
 }
 
 .round_button {
@@ -248,19 +264,6 @@
   visibility: visible;
   opacity: 1;
   height: 1.1em !important;
-}
-
-.orange-button {
-  font-size: 0.64285714rem;
-  background: #f2711c;
-  color: #fff;
-  border-radius: 100%;
-  width: 1rem;
-  height: 1rem;
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 1.7;
 }
 
 .button .round_button :hover .tooltiptext {
