--- a/main.css
+++ b/main.css
@@ -50,16 +50,23 @@
   visibility: visible;
 }
 
+.bought {
+  text-decoration: line-through;
+  visibility: hidden;
+
+}
+
 .buylist {
   padding: 0.5em;
 }
 
 .buttons {
   width: 37%;
-  min-width: 133px;
+  min-width: 165px;
   padding: 1rem;
   float: right;
   text-align: right;
+  box-sizing: border-box;
 }
 
 .bl-title {
@@ -106,8 +113,8 @@
   text-align: center;
 }
 
-#cancel {
-  background-color: red;
+.cancel {
+  background-color: red !important;
   color: white;
 }
 
@@ -142,7 +149,7 @@
 }
 
 .minicont {
-  padding: 10px 0;
+  padding: 0;
   margin: 10px;
   background: white;
   border-radius: 2px;
@@ -162,7 +169,7 @@
   border-top: none;
   border-radius: 0.28571429rem 0.28571429rem 0 0;
   max-width: 100%;
-  padding: 1em 1%;
+  padding: 1em 3%;
 }
 
 .my-input * {
@@ -175,6 +182,10 @@
   padding-left: 5px;
   font-size: 0.6em;
   font-weight: 100;
+}
+
+.new-name {
+  display: none;
 }
 
 .numlabel {
@@ -279,6 +290,12 @@
 
   .minicont {
     width: 80% !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .count {
+    width: 25%;
   }
 }
 
