[pr3]-just commit.

--- a/main.css
+++ b/main.css
@@ -107,10 +107,11 @@
 
 .count {
   width: 37%;
-  min-width: 108px;
+  min-width: 148px;
   padding: 1rem;
   vertical-align: middle;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .cancel {
