--- a/main.css
+++ b/main.css
@@ -129,7 +129,7 @@
   background-color: #dadada;
   padding: 0.5833em 0.833em;
   font-weight: 700;
-  border: 0 solid transparent;
+  border: 0;
   border-radius: 0.28571429rem;
   font-size: 0.64285714rem;
   line-height: 1;
